@startuml
'https://plantuml.com/class-diagram

class ReimbursementForm {
    - resolvedIds: String[]
    - employeeId: String
    - reimbursements: List<Reimbursement>
}

class ReimbursementController {
    + doGet(request: HttpServletRequest, response: HttpServletResponse): void
    + doPost(request: HttpServletRequest, response: HttpServletResponse): void
    - fillForm(form): void
    - updateReimbursements(form): void
}

class ReimbursementService {
    + findById(id: Integer): Reimbursement
    + findAll(): List<Reimbursement>
    + findByEmployee(employeeId: Integer): List<Reimbursement>
    + save(reimbursement: Reimbursement): void
}

class ReimbursementRepository {
    + findById(id: Integer): Reimbursement
    + findAll(): List<Reimbursement>
    + findByEmployee(employeeId: Integer): List<Reimbursement>
    + save(reimbursement: Reimbursement): void
}

ReimbursementController ..> ReimbursementForm
ReimbursementController *--> ReimbursementService
ReimbursementService *--> ReimbursementRepository

@enduml